--- a/app/views/admin/livros/_form.html.erb
+++ b/app/views/admin/livros/_form.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :isbn %>
   <%= f.input :descricao %>
   <%= f.input :ano %>
+  <%= f.input :capa %>
 
   <%= f.button :submit, :class => 'btn-primary' %>
   <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
