--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,13 +69,19 @@
         </div>
         <div class="col-lg-3">
           <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li class="nav-header">Categorias</li>
+              <% @categorias.each do |categoria| %>
+              <li><%= link_to categoria.nome, categoria  %></li>
+              <% end %>
             </ul>
+            <hr>
+            <ul class="nav nav-list">
+              <li class="nav-header">Editora</li>
+              <% @editoras.each do |editora| %>
+              <li><%= link_to editora.nome, editora  %></li>
+              <% end %>
+            </ul>            
           </div><!--/.well -->
         </div><!--/span-->
       </div><!--/row-->
