slug, nested_form and best_in_place

--- a/app/views/admin/autores/index.html.erb
+++ b/app/views/admin/autores/index.html.erb
@@ -1,5 +1,6 @@
 <%- model_class = Autor -%>
 <div class="page-header">
+  <%= link_to t('.new', :default => t("helpers.links.new")), new_admin_autor_path, :class => 'btn btn-primary pull-right' %>
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
 <table class="table table-striped">
@@ -33,6 +34,3 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_admin_autor_path,
-            :class => 'btn btn-primary' %>
